# call-centre

./: .gitignore  pyproject.toml
front-end/: babel.config.js  package-lock.json  package.json  tsconfig.json
front-end/public/: index.html
front-end/src/: App.vue  main.ts
front-end/src/components/: ArticleAnalysisSystem.vue  AudioComponent.vue  Config.vue  HelloWorld.vue  OrderingSystem.vue  TokenList.vue
front-end/src/components/CallCentre/: PlaygroundPage.vue  SystemConfig.vue  TranscriptAnalysisSys.vue
front-end/src/components/SalesHotline/: SalesHotline.vue  SystemConfig.vue
front-end/src/router/: index.ts
front-end/src/views/: CallCentre.vue  SalesHotline.vue
src/call_centre/: rest_api.py  run.py
src/call_centre/config/: __init__.py  settings.yml
src/call_centre/example/: transcribed.py
src/call_centre/services/: gpts.py  groq.py
src/call_centre/utils/: log.py  stt.py
src/input/20240325141445842533/: original.txt
