[tool.poetry]
name = "call-centre"
version = "0.1.0"
description = ""
authors = ["Terry <17601306065@163.com>"]
readme = "README.md"
packages = [{include = "call_centre", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
dynaconf = "^3.2.5"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
tiktoken = "^0.6.0"
openai = "^1.14.2"
python-multipart = "^0.0.9"
groq = "^0.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
